--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>E-1- Learning Theory ☀ Learning City Point</title>
-    <link rel="shortcut icon" href="./favicon.ico">
+    <link rel="shortcut icon" href="./favi.ico">
     <meta name="author" content="Fabrizio Terzi">
     <meta name="keywords" content="MIT, MOOC ,Groups, Spectrum, Il Portale">
     <meta name="description" content="Learning City Point Project @11.132x MIT">
@@ -11,10 +11,9 @@
 
     <!-- CSS -->
     <meta http-equiv="X-UA-Compatible" content="edge"/>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.css" />
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="../font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="styles/basic.css" />
-    <link rel="stylesheet" type="text/css" href="js/youtube-video-gallery-legacy-ie.css" />
     <link rel="stylesheet" type="text/css" media="only screen and (max-width: 1024px)" href="styles/mobile.css"/>
 
 <!-- friendly-->
@@ -45,7 +44,7 @@
 <!-- ==========  Logo ========== -->
   					  <img class="logo" alt="logotype" src="img/logo.png">
 <!-- ==========  User's photo ========== -->
-  					  <img class="photo" alt="photo" src="img/photo.jpg" <a href="./index.html">
+  					  <img class="photo" alt="photo" src="img/photo.jpg">
   				  </div>
                     <h3 class="mobile bcolor">
                         <a href="https://plus.google.com/communities/109121795367816526568">Join the community</a>
