--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- CSS -->
-    <meta http-equiv="X-UA-Compatible" content="edge"/>
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="../font-awesome/css/font-awesome.min.css" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <link rel="stylesheet" type="text/css"  href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" />
+    <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="styles/basic.css" />
+    <link rel="stylesheet" type="text/css" href="js/youtube-video-gallery-legacy-ie.css" />
     <link rel="stylesheet" type="text/css" media="only screen and (max-width: 1024px)" href="styles/mobile.css"/>
 
 <!-- friendly-->
@@ -22,18 +23,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- For all browsers -->
-<link rel="stylesheet" href="style/i.css">
-
-<!-- Load Modernizr -->
-<script src="assets/js/vendor/modernizr-3.3.1.custom.min.js"></script>
+<link rel="stylesheet" href="./style/i.css">
 
     <!--JavaScript-->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="js/masonry.pkgd.min.js"></script>
     <script src="js/script.js" type="text/javascript"></script>
-  
 </head>
-
 <body>
   <div id="background"></div>
   <div class="fullcontent">
@@ -51,7 +47,6 @@
                     </h3>
                     <div class="mobile">Benvenuti</div>
   			  </div>
-
 			  <div class="menu-items">
 
 <!-- ========  Copy this block for add new menu item: ======== -->
@@ -61,12 +56,10 @@
 					  <div class="menu-title">About</div>
 				  </a>
                   <!--end-->
-
           <a href="pages/portfolio.html" class="menuitem bigpage">
 					  <i class="icon-group"></i>
 					  <div class="menu-title">Groups</div>
 				  </a>
-
            <a href="pages/interview.html" class="menuitem bigpage">
             <i class="icon-facetime-video"></i>
             <div class="menu-title">Video Insights </div>
@@ -78,7 +71,7 @@
           </a>
 
           <a href="https://plus.google.com/u/0/communities/113303528008915836755" target="_blank" class="menuitem external">
-            <i class="icon-google-plus1"></i>
+            <i class="icon-google-plus"></i>
             <div class="menu-title">Goggle +</div>
           </a>
                   
@@ -93,10 +86,9 @@
           </a>
 
           <a href="https://it.linkedin.com/in/bergamohub001" target="_blank" class="menuitem external">
-            <i class="icon-linkedin1"></i>
+            <i class="icon-linkedin"></i>
             <div class="menu-title">Linkdin</div>
           </a>
-
 			  </div>
               <div id="linecontainer" class="select-about">
                   <div class="linewrapper">
@@ -110,7 +102,6 @@
           </div>
       </div>
         <div class="page">
-
 <!-- ======== AJAX Loader message ======== -->
             <div class="loader">
                 <div class="label glcolor">
@@ -129,6 +120,5 @@
             </div>
         </div>
   </div>
-
 </body>
 </html>
