--- a/pages/about.html
+++ b/pages/about.html
@@ -5,5 +5,4 @@
 <p>
 <span style="float: right"> Part of my "product pitch" final project @ <a href="https://www.edx.org/course/design-development-educational-mitx-11-132x-0?utm_source=Course+Announcements+Mailing+List&utm_medium=email&utm_content=title&utm_campaign=Student_Newsletter_January_12" target="_blank">#MIT</a> #EdX #11.132x course: 
 <br>
-Design and Development of Educational Technology</a> By:
-<a href="http://fabrizioterzi.eu" target="_blank"> Fabrizio Terzi</span></p></a> 
+Design and Development of Educational Technology By:<a href="http://fabrizioterzi.eu" target="_blank"> Fabrizio Terzi</a></span></p>
