--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 
     <!-- CSS -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <link rel="stylesheet" type="text/css"  href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" />
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" />
     <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="styles/basic.css" />
     <link rel="stylesheet" type="text/css" href="js/youtube-video-gallery-legacy-ie.css" />
     <link rel="stylesheet" type="text/css" media="only screen and (max-width: 1024px)" href="styles/mobile.css"/>
-
+    <link rel="stylesheet" type="text/css" href="js/modernizr.custom.min.js" />
 <!-- friendly-->
 <meta name="HandheldFriendly" content="True">
 <meta name="MobileOptimized" content="320">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- For all browsers -->
-<link rel="stylesheet" href="./style/i.css">
+<link rel="stylesheet" href="style/i.css">
 
     <!--JavaScript-->
     <script src="js/jquery.min.js"></script>
