--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" />
     <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="styles/basic.css" />
-    <link rel="stylesheet" type="text/css" href="js/youtube-video-gallery-legacy-ie.css" />
+
+    <link rel="stylesheet" type="text/css" href="styles/youtube-video-gallery-legacy-ie.css" />
     <link rel="stylesheet" type="text/css" media="only screen and (max-width: 1024px)" href="styles/mobile.css"/>
     <link rel="stylesheet" type="text/css" href="js/modernizr.custom.min.js" />
 <!-- friendly-->
@@ -26,8 +27,8 @@
 <link rel="stylesheet" href="style/i.css">
 
     <!--JavaScript-->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/masonry.pkgd.min.js"></script>
+    <script src="js/jquery.min.js" type="text/javascript"></script>
+    <script src="js/masonry.pkgd.min.js" type="text/javascript"></script>
     <script src="js/script.js" type="text/javascript"></script>
 </head>
 <body>
