--- a/pages/about.html
+++ b/pages/about.html
@@ -1,8 +1,9 @@
-<h1>Design and Development <br><span class="glcolor"> Educational Technology</span></h1>
-<p><i>Imagine the power and potential of millions of people around the world connecting, learning, sharing, creating and inspiring others to do the same. I hope you will join our growing community of "Educational innovators in Action" that, using their talents, gifts and inspirations are re-imagine new models to learn together.</i></p>
-
-<p>E-1- Learning Theory "section" <a href="http://peeragogia.github.io/Manuale-V3/italy/it-3-ilportale.html" target="_blank"> Il Portale - </a> Italian Learning City Point.</p>
+<h1>Design and Development <br><span class="glcolor"> Peeragogical Educational Technology</span></h1>
+<p>Imagine the power and potential of millions of people around the world connecting, learning, sharing, creating and inspiring others to do the same. I hope you will join our growing community of city innovetors champions that, using their talents, gifts and energy are moving Bergamo to re-imagine itself.
+</p>
+<p>E-1- Learning Theory "section" <a href="http://peeragogia.github.io/Manuale-V3/italy/it-3-ilportale.html">Il Portale - </a> Italian Learning City Point.</p>
 <p>
-<span style="float: right"> Part of my "product pitch" final project @ <a href="https://www.edx.org/course/design-development-educational-mitx-11-132x-0?utm_source=Course+Announcements+Mailing+List&utm_medium=email&utm_content=title&utm_campaign=Student_Newsletter_January_12" target="_blank">#MIT</a> #EdX #11.132x course: 
-<br>
-Design and Development of Educational Technology By:<a href="http://fabrizioterzi.eu" target="_blank"> Fabrizio Terzi</a></span></p>
+<span style="float: right"> Part of the <a href="">#MIT</a> #EdX course:
+<br
+ <a href="https://www.edx.org/course/design-development-educational-mitx-11-132x-0?utm_source=Course+Announcements+Mailing+List&utm_medium=email&utm_content=title&utm_campaign=Student_Newsletter_January_12#"> Design and Development of Educational Technology</a> By:
+<a href="http://fabrizioterzi.eu" target="_blank"> Fabrizio Terzi</span></p></a> 
