--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>E-1- Learning Theory ☀ Learning City Point</title>
-    <link rel="shortcut icon" href="./favi.ico">
+    <title></title>
+    <link rel="shortcut icon" href="favi.ico">
     <meta name="author" content="Fabrizio Terzi">
     <meta name="keywords" content="MIT, MOOC ,Groups, Spectrum, Il Portale">
     <meta name="description" content="Learning City Point Project @11.132x MIT">
