--- a/pages/about.html
+++ b/pages/about.html
@@ -4,6 +4,6 @@
 <p>E-1- Learning Theory "section" <a href="http://peeragogia.github.io/Manuale-V3/italy/it-3-ilportale.html">Il Portale - </a> Italian Learning City Point.</p>
 <p>
 <span style="float: right"> Part of the <a href="">#MIT</a> #EdX course:
-<br
+<br>
  <a href="https://www.edx.org/course/design-development-educational-mitx-11-132x-0?utm_source=Course+Announcements+Mailing+List&utm_medium=email&utm_content=title&utm_campaign=Student_Newsletter_January_12#"> Design and Development of Educational Technology</a> By:
-<a href="http://fabrizioterzi.eu" target="_blank"> Fabrizio Terzi</span></p></a> 
+<a href="http://fabrizioterzi.eu" target="_blank"> Fabrizio Terzi</a> </span></p>
