--- a/pages/map.html
+++ b/pages/map.html
@@ -10,15 +10,13 @@
                             <a class="innerlink minibutton fleft mtop20 mright20 bigpage" href="index.html">
                                 <i class="icon-arrow-left"></i>
                             </a>
-
                            Learning City Point 
-                
                         </h1>
                         <div class="section portfolio-single">
                             <p>
 <strong>Location:</strong> Via Tasso Bergamo (Bg) "La casetta del tè" 
 <p>Visual depicting our community's breadth of coverage around the world.</p>
-<br>Coordinate geografiche: <a href="https://www.openstreetmap.org/note/499942" target="_blank"> 45°41'55.5"N 9°40'24.0"E</a></p
+<br>Coordinate geografiche: <a href="https://www.openstreetmap.org/note/499942" target="_blank"> 45°41'55.5"N 9°40'24.0"E</a>
 <div class="container">
 <iframe width="100%" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://www.openstreetmap.org/export/embed.html?bbox=9.672466814517975%2C45.698257431840716%2C9.674290716648102%2C45.699411406093446&amp;layer=mapnik&amp;marker=45.69883442194404%2C9.673378765583038" style="border: 1px solid black"></iframe><br/><small><a href="http://www.openstreetmap.org/?mlat=45.69883&amp;mlon=9.67338#map=19/45.69883/9.67338&amp;layers=N">Visualizza mappa ingrandita</a></small>
 </div>
